# crocodile

./: .gitignore  CLAUDE.md  CLI_QUICK_REFERENCE.md  Cargo.toml  DOCUMENTATION_INDEX.md  RUST_CLI_BEST_PRACTICES.md  readme.md
.croc/: .gitignore  cache.db-shm  cache.db-wal  events.jsonl  plans.jsonl
src/: cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  schemas.rs  tmux.rs
src/commands/: init.rs  mod.rs  prime.rs
src/engine/: cache.rs  croc_engine.rs  mod.rs  storage.rs
