[package]
name = "crocodile"
version = "0.1.0"
edition = "2024"
description = "Human-in-the-loop AI agent orchestrator"
license = "MIT"

[[bin]]
name = "croc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
color-eyre = "0.6"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"

# File locking for concurrent JSONL writes
fs2 = "0.4.3"

# SQLite query cache (async)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# UUID generation for IDs
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.14"
